--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -67,9 +67,9 @@
     "step.barn.stepIndicatorLabel": "Barn",
     "step.barn.har_fått_ekstra_omsorgsdager": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
 
-    "step.periode.pageTitle": "Hvilke dager søker du utbetaling for?",
-    "step.periode.stepTitle": "Hvilke dager søker du utbetaling for?",
-    "step.periode.stepIndicatorLabel": "Hvilke dager søker du utbetaling for?",
+    "step.periode.pageTitle": "Hvilke dager har du vært hjemme med barn?",
+    "step.periode.stepTitle": "Hvilke dager har du vært hjemme med barn?",
+    "step.periode.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
     "step.periode.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
     "step.periode.dager_med_fullt_fravært.label": "Dager med fullt fravær",
     "step.periode.dager_med_fullt_fravært.info": "TODO",
@@ -86,9 +86,7 @@
     "step.inntekt.pageTitle": "Inntekt",
     "step.inntekt.stepTitle": "Inntekt",
     "step.inntekt.stepIndicatorLabel": "Inntekt",
-    "step.inntekt.er_arbeidstaker.frilanser": "Er du arbeidstaker i tillegg til å være frilanser?",
-    "step.inntekt.er_arbeidstaker.selvstendig": "Er du arbeidstaker i tillegg til å være selvstendig næringdrivende?",
-    "step.inntekt.er_arbeidstaker.begge": "Er du arbeidstaker i tillegg til å være selvstendig næringdrivende og frilanser?",
+    "step.inntekt.er_arbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
 
     "step.opplysninger-om-barnet.pageTitle": "Omsorgspengesøknad - opplysninger om barnet",
     "step.opplysninger-om-barnet.stepTitle": "Barn",
