--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -65,7 +65,6 @@
     "step.barn.pageTitle": "Barn",
     "step.barn.stepTitle": "Barn",
     "step.barn.stepIndicatorLabel": "Barn",
-    "step.barn.har_fått_ekstra_omsorgsdager": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
 
     "step.periode.pageTitle": "Hvilke dager har du vært hjemme med barn?",
     "step.periode.stepTitle": "Hvilke dager har du vært hjemme med barn?",
@@ -160,6 +159,9 @@
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
+
+    "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
+    "steg.barn.har_fått_ekstra_omsorgsdager.spm": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i andre land enn Norge i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandSiste12.hjelp": "Du svarer ja bare hvis du har oppholdt deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
