--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -161,7 +161,7 @@
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
     "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
-    "steg.barn.har_fått_ekstra_omsorgsdager.smp": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
+    "steg.barn.har_fått_ekstra_omsorgsdager.spm": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i andre land enn Norge i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandSiste12.hjelp": "Du svarer ja bare hvis du har oppholdt deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
