legger til smittevern spørsmål på oppsummeringen, og legger inn tekster på dokument steget.

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -251,7 +251,7 @@
     "steg.footer.avbryt": "Avbryt og slett søknad",
     "steg.footer.fortsettSenere": "Avslutt og fortsett senere",
 
-    "step.vedlegg.stepTitle": "A: Hva skal det stå her?",
+    "step.vedlegg.stepTitle": "Ta bildet av bekreftelsen fra legen, og last opp.",
     "steg.dokumenter.vedlegg": "Last opp bilde av dokumentene (maks 3 bilder)",
     "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet smittevernhensyn?",
     "steg.oppsummering.dokumenter.header": "Dokumenter",
