--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -254,8 +254,9 @@
     "step.vedlegg.stepTitle": "Ta bildet av bekreftelsen fra legen, og last opp.",
     "steg.dokumenter.vedlegg": "Last opp bilde av dokumentene (maks 3 bilder)",
     "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet smittevernhensyn?",
-    "steg.oppsummering.dokumenter.header": "Dokumenter",
+    "steg.oppsummering.dokumenter.header": "Bekreftelse fra lege",
     "step.vedlegg.stepIndicatorLabel": "Last opp dokumenter",
     "step.vedlegg.pageTitle": "Last opp dokumenter",
-    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp"
+    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
+    "steg.oppsummering.dokumenter.ikkelastetopp": "Ikke lastet opp, må ettersendes"
 }
