--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -263,7 +263,7 @@
 
     "psg-temp.innholdstittel": "Ta bilde av dokumentene og last opp",
     "psg-temp.section1.tittel": "Slik tar du et godt bilde:",
-    "psg-temp.section1.liste": "<li>Hold mobilen eller kameraet direkte over dokumentet.</li><li>Dokumentet skal fylle hele bildet. Bildet skal ikke ikke inneholde annen dokumentasjon eller gjenstander.</li><li>Bildet må inneholde all tekst i dokumentet. Hvis dokumentet er på mer enn én side, bør du laste opp flere bilder.</li>",
+    "psg-temp.section1.liste": "<li>Hold mobilen eller kameraet direkte over dokumentet.</li><li>Dokumentet skal fylle hele bildet. Bildet skal ikke inneholde annen dokumentasjon eller gjenstander.</li><li>Bildet må inneholde all tekst i dokumentet. Hvis dokumentet er på mer enn én side, bør du laste opp flere bilder.</li>",
     "psg-temp.section2.tittel": "Etter at du har tatt bildet, sjekk følgende før du laster opp:",
     "psg-temp.section2.liste": "<li>Dokumentet har riktig retning.</li><li>Teksten til dokumentet er godt leselig.</li><li>Bildet er godt opplyst, uten skygger.</li>",
     "psg-temp.icon.heading": "Bra og dårlige eksempler på bilder av dokumenter",
