Add option midlertidigkompensasjonsnfri

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -46,6 +46,7 @@
 
     "andre_utbetalinger.dagpenger": "Dagpenger",
     "andre_utbetalinger.sykepenger": "Sykepenger",
+    "andre_utbetalinger.midlertidigkompensasjonsnfri": "Midlertidig kompensasjon for selvstendig næringsdrivende og frilanser",
 
     "arbeidssituasjon.arbeidstaker": "Arbeidstaker",
     "arbeidssituasjon.selvstendigNæringsdrivende": "Selvstendig næringsdrivende",
