--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -252,7 +252,7 @@
 
     "step.vedlegg.stepTitle": "Ta bildet av bekreftelsen fra legen, og last opp.",
     "steg.dokumenter.vedlegg": "Last opp bilde av dokumentene (maks 3 bilder)",
-    "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet smittevernhensyn?",
+    "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
     "steg.oppsummering.dokumenter.header": "Bekreftelse fra lege",
     "step.vedlegg.stepIndicatorLabel": "Last opp dokumenter",
     "step.vedlegg.pageTitle": "Last opp dokumenter",
